--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <h1>Mt. Hood Meadows Conditions</h1>
+    <header class="navigation">
+      <div class="inline-block logo">
+       <img src="assets/Logo.png">
+      </div>
+      <div class="hero">
+        <img src="assets/HeroImage.png">
+        <h1>All lots are open. Snowing with moderate to strong wind. Today's weather plan: snowier and stormier as the day goes on. Value passes work after 2pm. Come on up!</h1>
+     
+    </div>
     </header>
     <main>
       <section id=“currentConditions”>
