--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <img src="assets/Logo.png">
       </div>
       <div class="hero">
-        <img src="assets/HeroImage.png">
+        <img src="assets/Hero.png">
         <h1>All lots are open. Snowing with moderate to strong wind. Today's weather plan: snowier and stormier as the day goes on. Value passes work after 2pm. Come on up!</h1>
      
     </div>
